src/test/ui/traits/negative-impls/rely-on-negative-impl-in-coherence.stderr
error[E0119]: conflicting implementations of trait `LocalTrait` for type `std::string::String`:
  --> $DIR/rely-on-negative-impl-in-coherence.rs:19:1
   |
LL | impl<T: ForeignTrait> LocalTrait for T { }
   | -------------------------------------- first implementation here
LL | impl LocalTrait for String { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `std::string::String`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
